# PlatariumCore

./: .gitignore  Cargo.toml  Dockerfile.linux-cli  LICENSE  README.md
src/: error.rs  key_generator.rs  lib.rs  main.rs  mnemonic.rs  signature.rs  signer.rs  utils.rs
src/core/: asset.rs  block_assembly.rs  block_proposal.rs  block_proposal_cli.rs  confirmation_layer.rs  consensus_cli.rs  consensus_params.rs  core_rpc.rs  determinism.rs  execution.rs  fee.rs  mempool.rs  mod.rs  node_registry.rs  slashing.rs  state.rs  state_file.rs  transaction.rs  tx_assignment.rs  validator_selection.rs
src/storage/: commit.rs  migrations.rs  mod.rs  query.rs  rocks.rs  rpc.rs  schema.rs  snapshot.rs
tests/: block_formation_test.rs  consensus_cli_test.rs  determinism_invariants_test.rs  integration_test.rs  module_test.rs  run_all_tests.sh  state_cli_test.rs
